# rune-pause-app

./: .prettierrc  CHANGELOG.md  NORDIC_THEME.md  eslint.config.js  package.json  pause.html  pnpm-lock.yaml  test-lint.js  vite.config.ts
temp-merge-project/: App.tsx  BUTTON_POSITIONING_FIX.md  Cargo.toml  Cargo.workspace.toml  NAVIGATION_FIX_SUMMARY.md  STYLING_FILES_GUIDE.md  SVELTE_PORTING_GUIDE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
temp-merge-project/components/: BreathingExercise.tsx  ConfigView.tsx  NightSkyBackground.tsx  PauseView.tsx  SeasonTheme.tsx  SimpleBreathing.ts  SimpleSounds.ts  SimpleStretch.ts  SimpleTimer.ts  SmartActivitySelector.tsx  SoundSystem.tsx  StretchGuide.tsx
temp-merge-project/core/timer/: Cargo.toml
temp-merge-project/core/timer/src/: lib.rs
temp-merge-project/src/: App.svelte  main.ts  nordic.css  styles.css  test-setup.ts
temp-merge-project/src-tauri/src/: bridge.rs  idle.rs  main.rs  state.rs
temp-merge-project/src/assets/: rune-icon-temp.txt
temp-merge-project/src/components/: Button.svelte  TimerControls.svelte  TimerDisplay.svelte
temp-merge-project/src/lib/: api.ts  types.ts
temp-merge-project/src/lib/audio/: SoundManager.ts
temp-merge-project/src/lib/components/: ConfigView.svelte  (+2 more)
temp-merge-project/src/stores/: timer.ts
temp-merge-project/src/types/: timer.ts
temp-merge-project/src/utils/: time.ts
temp-merge-project/styles/: globals.css  nordic-theme.css
temp-merge-project/tests/: TimerDisplay.test.ts
(+24 files in other folders)
