[package]
name = "rune-pause"
version = "0.4.0"
edition = "2021"
description = "Modern Pomodoro timer built with Tauri and Svelte"
authors = ["CaptainOtto"]
license = "MIT"
repository = "https://github.com/CaptainOtto/rune-pause"
readme = "README.md"
keywords = ["tauri", "pomodoro", "timer", "productivity"]
categories = ["gui", "development-tools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-ico"] }
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

# Error handling
anyhow = "1"
thiserror = "1"

# System directories
dirs = "5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
core_timer = { version = "0.1.0", path = "core/timer" }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation"
] }

# Local dependencies
core_timer = { path = "core/timer" }

[[bin]]
name = "rune-pause"
path = "src-tauri/src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
